# internal/http/router.go
@@ -43,7 +43,7 @@ func NewRouter() http.Handler {
 	r.Route("/admin", func(r chi.Router) {
 		r.Use(AuthMiddleware, RequireRole("admin"))
 		r.Post("/users", handlers.RegisterAsAdminHandler)
-
+		r.Get("/users/{username}/tokens", handlers.ListUserTokensHandler)
 		r.Get("/tokens", handlers.ListRefreshTokensHandler)
 		r.Delete("/tokens/{username}", handlers.RevokeRefreshTokenHandler)
 	})
